--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "git-filter-repo": "^0.0.30",
     "http-proxy-middleware": "^3.0.5"
   }
 }
